<resources>
    <string name="app_name">Agenda de Tarefas</string>
    <string name="label_hour" />

    <string name="label_title">label_title</string>
<!--    <string name="label_new_label">Criar Tarefa</string>-->
    <string name="label_new_title">Titulo</string>
    <string name="label_date">Data</string>
    <string name="label_new_hour">Houra</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="you_dont_have_tasks">Ops! Você não tem tarefas.</string>


</resources>